--- a/META.yml
+++ b/META.yml
@@ -1,17 +1,20 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         Perl-Compare
-version:      0.07
-version_from: lib/Perl/Compare.pm
-installdirs:  site
-requires:
-    Data::Dumper:                  0
-    File::Spec:                    0.82
-    List::MoreUtils:               0
-    List::Util:                    1.11
-    PPI:                           0.829
-    Scalar::Util:                  1.11
-    Test::More:                    0
-
+name: Perl-Compare
+version: 0.10
+abstract: Normalized comparison for Perl document trees
+author: Adam Kennedy<cpan@ali.as>
+license: perl
 distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.16
+build_requires:
+  Test::More: 0.47
+  File::Spec: 0.82
+requires:
+  perl: 5.005
+  File::chdir: 0.06
+  List::MoreUtils: 0.08
+  File::Find::Rule: 0.20
+  Perl::Signature: 0.04
+no_index:
+  directory:
+    - t.data
+    - inc
+generated_by: Module::Install version 0.36
