--- a/META.yml
+++ b/META.yml
@@ -1,20 +1,26 @@
-name: Perl-Compare
-version: 0.10
-abstract: Normalized comparison for Perl document trees
-author: Adam Kennedy<cpan@ali.as>
-license: perl
-distribution_type: module
+---
+abstract: 'Normalized Comparison for Perl Source Trees'
+author:
+  - 'Adam Kennedy <adamk@cpan.org>'
 build_requires:
-  Test::More: 0.47
   File::Spec: 0.82
-requires:
-  perl: 5.005
-  File::chdir: 0.06
-  List::MoreUtils: 0.08
-  File::Find::Rule: 0.20
-  Perl::Signature: 0.04
+  Test::More: 0.47
+distribution_type: module
+generated_by: 'Module::Install version 0.75'
+license: perl
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.3.html
+  version: 1.3
+module_name: Perl::Compare
+name: Perl-Compare
 no_index:
   directory:
-    - t.data
     - inc
-generated_by: Module::Install version 0.36
+    - t
+requires:
+  File::Find::Rule: 0.20
+  File::chdir: 0.06
+  List::MoreUtils: 0.08
+  Params::Util: 0.10
+  Perl::Signature: 0.04
+version: 0.11
